--- a/docker_hoernchen/vue_hoernchen/index.html
+++ b/docker_hoernchen/vue_hoernchen/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./src/styles.css">
     <title>vue_hoernchen_reactsearch</title>
   </head>
   <body>
